--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Runner Game</title>
+  <title>SuperSip Quest</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:title" content="Runner Game - SuperSip Quest" />
+  <meta property="og:description" content="Play this exciting SuperSip Quest game and beat your high score!" />
+  <meta property="og:image" content="./assets/og-image.jpg" />
+  <meta property="og:type" content="website" />
   <script src="https://cdn.jsdelivr.net/npm/phaser@3.60.0/dist/phaser.min.js"></script>
   <style>
     body {
